search form position fixed so theres no gap between the form and the navbar (I think its the final commit)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -353,7 +353,7 @@ box-shadow: 1px 12px 22px 2px #e6eff9;
 .search-form-wrap-nav{
   width: 100%;
   position: fixed;
-  top: 4.3em;
+  top: 4em;
   background-color: #DEEBF7;
   padding: 0.2em 0.2em;
 }
@@ -407,14 +407,12 @@ background-color: #2A6AA2;
 
 
 
-
-
-
-
-
-
-
-
+@media only screen and (min-width: 768px){
+  .search-form-wrap-nav{
+    position: fixed;
+    top: 4.3em;
+  }
+}
 
 @media only screen and (min-width: 700px) {
     .search-form-nav{
